syntax = "proto3";

package tech.monstrs.chats_system.messages.v1alpha1;

import "tech/monstrs/queries/v1alpha1/queries.proto";

service MessagesService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

enum PeerType {
  UNKNOWN = 0;
  EMPTY = 1;
  SELF = 2;
  USER = 3;
  CHAT = 4;
  CHANNEL = 5;
  USERS = 6;
  CHATS = 7;
}

message SendMessageRequest {
  int64 random_id = 1;
  int64 from_id = 2;
  PeerType peer_type = 3;
  int64 peer_id = 4;
  string message = 5;
}

message SendMessageResponse {
}
