syntax = "proto3";

package tech.monstrs.chats_system.messages.v1alpha1;

enum PeerType {
  UNKNOWN = 0;
  EMPTY = 1;
  SELF = 2;
  USER = 3;
  CHAT = 4;
  CHANNEL = 5;
  USERS = 6;
  CHATS = 7;
  ENCRYPTED_CHAT = 8;
  BROADCASTS = 9;
  USER_MESSAGE = 10;
  CHANNEL_MESSAGE = 12;
}

message Peer {
  int64 self_id = 1;
  PeerType peer_type = 2;
  int64 peer_id = 3;
  int64 access_hash = 5;
}

message Dialog {
  int64 id = 1;
  int64 user_id = 2;
  Peer peer = 3;
  int64 peer_dialog_id = 4;
  int64 date = 5;
  bool pinned = 6;
  int32 top_message = 7;
  int32 read_inbox_max_id = 8;
  int32 read_outbox_max_id = 9;
  int32 unread_count = 10;
  bool unread_mark = 11;
  int32 unread_mentions_count = 12;
  int32 unread_reactions_count = 13;
  int32 folder_id = 14;
  int64 folder_pinned = 15;
}

message Message {
  int64 id = 1;
  Peer from = 2;
  Peer peer = 3;
  int32 message_id = 4;
  int32 date = 5;
  string message = 6;
  int64 sender_user_id = 7;
}
